# ddt_aws_adf

./: README.md  package-lock.json  pyproject.toml  report.md  sample_glue_config.json  sample_glue_script.py
aws-azure-migration-tool/: README.md  docker-compose.yml
aws-azure-migration-tool/backend/: Dockerfile  databricks_notebook.py  mapping_report.md  requirements.txt
aws-azure-migration-tool/backend/app/: main.py
aws-azure-migration-tool/backend/app/api/: routes.py
aws-azure-migration-tool/backend/app/core/: config.py
aws-azure-migration-tool/backend/app/services/: mapping_service.py
aws-azure-migration-tool/backend/tests/: test_api.py
aws-azure-migration-tool/frontend/: .eslintrc.js  Dockerfile  nginx.conf  package-lock.json  package.json
aws-azure-migration-tool/frontend/public/: index.html
aws-azure-migration-tool/frontend/src/: App.vue  router.js
aws-azure-migration-tool/frontend/src/services/: api.js
aws-azure-migration-tool/frontend/src/views/: About.vue  Home.vue  MappingPage.vue
src/ddt_aws_adf/: crew.py  main.py
src/ddt_aws_adf/config/: agents.yaml  tasks.yaml
